stylesheets/hotel_default.css
button {
    background-color: lightgrey;
    color: black;
    padding: 14px 20px;
    margin: 8px 0;
    border: none;
    width: 100%;
}

button:hover {
    opacity: 0.8;
}

.button.login {
    background-color: #4CAF50;
    color: white;
    width: 100%;
}

.login_entry {
    width: 50%;
    margin: auto;
    padding: 10px;
    transform: translate(0%, +50%);
    text-align: center;
}

.logon_text,
.logon_input {
    width: 100%;
    padding: 12px 20px;
    margin: 8px 0;
    display: inline-block;
    box-sizing: border-box;
    text-align: center;
}

.logintext {
    width: 100%;
    display: inline-block;
    font-size: xx-large;
}

.left_menu {
    height: 100%;
    width: 300px;
    position: fixed;
    z-index: 1;
    top: 0;
    left: 0;
    background-color: black;
    overflow-x: hidden;
}

.left_menu a {
    padding: 5px;
    text-decoration: none;
    font-size: 25px;
    color: grey;
    display: block;
    text-align: center;
}

.left_menu a:hover {
    color: #f1f1f1;
}

.left_menu .title {
    background-color: black;
    color: white !important;
    padding: 10px;
    text-align: center;
}

.left_menu .splitter {
    background-color: grey;
    height: 5px;
    margin: 5px;
}

.main {
    margin-left: 300px;
}

.titlebar {
    background-color: grey;
    color: white !important;
    width: 100%;
    padding: 10px;
    text-align: center;
    font-size: 25px;
}

.searchfield_container {
    padding: 12px 20px;
    margin: 8px 0;
    display: inline-block;
    box-sizing: border-box;
    text-align: center;
}

.search_record_container {
    margin-top: 10px;
    background-color: lightgrey;
}


.basic_results {
    font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
    border-collapse: collapse;
    width: 100%;
}

.basic_results td,
th {
    border: 1px solid #ddd;
    padding: 8px;
}

.basic_results tr:nth-child(even) {
    background-color: #f2f2f2;
}

.basic_results tr:hover {
    background-color: #ddd;
}


.basic_results th {
    padding-top: 12px;
    padding-bottom: 12px;
    text-align: left;
    background-color: lightgrey;
    color: black;
}

.refresh_results {
    background-color: grey;
    color: white;
    height: 30px;
    margin: 20px;
    border: none;
}

.results_action {
    background-color: lightgrey;
    color: black;
    display: block;
    border: none;
}

.new_or_edit {
    display: none;
    position: fixed;
    z-index: 9999;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    overflow-y: scroll;
    background-color: rgb(0, 0, 0);
    background-color: rgba(0, 0, 0, 0.4);
}

.new_or_edit_container {
    background-color: lightgrey;
    margin-left: 350px;
    margin-right: 50px;
    margin-top: 50px;
    margin-bottom: 50px;
    padding: 20px;
    border: 1px solid grey;
}

.close_new_or_edit {
    color: darkgrey;
    float: right;
    font-size: 28px;
    font-weight: bold;
}

.close_new_or_edit:hover,
.close_new_or_edit:focus {
    color: #000;
    text-decoration: none;
    cursor: pointer;
}

.newedit_buttons {
    background-color: grey;
    color: white;
    height: 30px;
    margin: 20px;
    border: none;
}

.hidden {
    display: none;
}

